# Vibe99

./: .dockerignore  .gitattributes  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  forge.config.cjs  knip.json  new-worktree.ps1  package-lock.json  package.json  towncrier.toml  tsconfig.json  vite.config.js  vitest.config.js
.claude/: settings.local.json
changes/: +activity-alert-fixes.bugfix.md  +activity-alert-repeat-trigger.bugfix.md  +add-pane-profile-selector.feature.md  +alert-multi-strategy.feature.md  +appimage-maker.bugfix.md  +bg-pane-mask.feature.md  +breathing-activity-mask.feature.md  +breathing-intensity-selector.feature.md  +breathing-light-cancel-on-new-content.bugfix.md  +chinese-font-support.feature.md  +ci-cache-node-rust.feature.md  +cjk-default-font-fallback.bugfix.md  +cjk-rendering-drop-webgl.bugfix.md  +command-palette-e2e-tests.feature.md  +command-palette-list.feature.md  +consolidate-recording-scripts.misc.md  +context-menu-activity-toggle-dot.bugfix.md  +context-menu-shortcuts.bugfix.md  +ctrl-backtick-cycling.feature.md  +ctrl-backtick-lit-pane.feature.md  +custom-alert-strategies.feature.md  +dead-code-cleanup.bugfix.md  +docker-e2e-builder.doc.md  +docker-e2e-incremental-build.misc.md  +e2e-ci-workflow.feature.md  +e2e-debounce-clamp-fix.bugfix.md  +e2e-docker-path-fix.bugfix.md  +e2e-profile-drag-reorder-tests.feature.md  +e2e-quake-hotkey-tests.feature.md  +e2e-test-infrastructure.feature.md  +feature-docs.doc.md  +fix-e2e-binary-rebuild.bugfix.md  +fix-e2e-ci-webkit-driver.bugfix.md  +fix-hotkey-quake-ui.bugfix.md  +float-window-click-target.bugfix.md  +float-window-e2e-tests.feature.md  +focus-controller-integration.feature.md  +font-family.feature.md  +font-settings-ui-leak.bugfix.md  +fullscreen-native-window.bugfix.md  (+206 more)
docs/: complexity-20260517.txt  e2e-windows-status.md  multi-layout-window-refactor-plan.md  post-phase2-revise-plan.md  refactor-phase1-plan.md  refactor-phase2-plan.md  refactor-phase2-review-revision-plan.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/hooks/: installer.nsh
src-tauri/src/: lib.rs  main.rs  pty.rs  windows.rs  wsl.rs
src-tauri/src/commands/: alert_hook.rs  cli.rs  context_menu.rs  hook.rs  hotkey.rs  layout.rs  mod.rs  settings.rs  shell_profile.rs  terminal.rs  window.rs  wsl.rs
src-tauri/src/pty/: mod.rs  shell_resolver.rs
(+201 files in other folders)
