[package]
name = "vibe99"
version = "0.21.0"
description = "Vibe99 terminal workspace"
authors = [""]
edition = "2021"
default-run = "vibe99"

[lib]
name = "vibe99_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vibe99ctl"
path = "src/bin/vibe99ctl.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "devtools",
  "image-png",
  "tray-icon",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
percent-encoding = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
] }
